--- a/word-sramble/style.css
+++ b/word-sramble/style.css
@@ -26,7 +26,7 @@ input {
   display: block;
   margin-left: 240px;
   margin-top: 80px;
-  
+  text-transform: lowercase;
   border-bottom: 2px solid #57B8D6;
 
 }
